# django-starter

./: .env.example  .gitignore  README.md  db.sqlite3  justfile  pyproject.toml
apps/core/: urls.py  views.py
apps/core/templates/core/: base.html  home.html
apps/theme/templates/: base.html
project/: urls.py
project/settings/: allauth.py  base.py
