[project]
name = "django-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.2",
    "django-allauth[socialaccount]>=65.14.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
]

[dependency-groups]
dev = [
    "django-tailwind[cookiecutter,cookiecutter,honcho,reload]>=4.4.2",
    "pytest>=9.0.2",
]
